Ensure that the benchmark output uses a dot and not a comma